test/exits/sungeun/exitWithNoParens.good
exitWithNoParens.chpl:2: error: syntax error near '1'
